chore(*): reduce usage of deprecated APIs (#3910)