@@ -38,18 +38,18 @@ public class ManagementServiceTableCountTest extends PluggableProcessEngineTest 
     String tablePrefix = processEngineConfiguration.getDatabaseTablePrefix();
 
     if(managementService.getLicenseKey() != null) {
-      assertEquals(new Long(1), tableCount.get(tablePrefix + "ACT_GE_BYTEARRAY"));
+      assertEquals(Long.valueOf(1), tableCount.get(tablePrefix + "ACT_GE_BYTEARRAY"));
     } else {
-      assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_GE_BYTEARRAY"));
+      assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_GE_BYTEARRAY"));
     }
-    assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RE_DEPLOYMENT"));
-    assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RU_EXECUTION"));
-    assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_ID_GROUP"));
-    assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_ID_MEMBERSHIP"));
-    assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_ID_USER"));
-    assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RE_PROCDEF"));
-    assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RU_TASK"));
-    assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RU_IDENTITYLINK"));
+    assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RE_DEPLOYMENT"));
+    assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RU_EXECUTION"));
+    assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_ID_GROUP"));
+    assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_ID_MEMBERSHIP"));
+    assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_ID_USER"));
+    assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RE_PROCDEF"));
+    assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RU_TASK"));
+    assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RU_IDENTITYLINK"));
   }
 
 }
